--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+@media screen and (min-width: 768px) {
+.navMargin {
+  margin-left: 250px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.positionTop{
+  position: absolute;
+  top: 38%;
+  left: 33%;
+ }
+
+ .search-input::placeholder {
+  position: relative;
+  padding: 28px;
+ }
+ .freeSize{
+   /* margin-left: 30px; */
+   margin-right: -190px;
+ }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* For small devices */
+@media screen and (max-width: 767px) {
+  .positionTop{
+    position: absolute;
+    top: 49%;
+    left: 7%;
+   }
+   
+   .search-input::placeholder {
+    position: relative;
+    padding: 28px;
+   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bgTitle{
+  color:#27A365;
 }
